welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:12: error: not found: value x
		x=x+1
                ^