welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var tour=0
var nbg=0

while(tour!=10){
	avance()
	if(estFaceMur()==true){
		gauche()
		nbg=nbg+1
	}
	if (nbg%4==0){
		x=x+1
	}
}